descomprime arquivo e deleta ao utiliza-lo

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "paulo",
   "license": "ISC",
   "dependencies": {
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "decompress": "^4.2.1"
   }
 }
